[package]
name = "tabwallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { version = "0.23", features = ["sqlite"] }
electrum-client = "0.11"
toml = "0.5"
serde = "1"
log = "0.4"
env_logger = "0.9"